# bfslib

./: .gitignore  README.md  pyproject.toml
bfslib/: abstract.py  main.py
bfslib/blocks/: __init__.py  strokes.py
bfslib/generators/: __init__.py  sines.py
