[tool.poetry]
name = "bfslib"
version = "0.0.1"
description = "A library to create Funscripts with blocks"
authors = ["Hdnsk <hdnsk0000@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
