[tool.poetry]
name = "bfslib"
version = "0.0.1"
description = "A library to create Funscripts with blocks"
authors = ["Hdnsk <hdnsk0000@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
PySide2 = "^5.15.2"

[tool.poetry.scripts]
bftest = "bfslib.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
